[project]
name = "content2graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Flash Hu",email = "idisblueflash@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dspy (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
